--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,7 +23,7 @@ main:
     url: '#contact'
     weight: 60
   - name: Research
-    url: '#research'
+    url: 'research/'
     weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
