--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -28,6 +28,9 @@ main:
   - name: CV
     url: uploads/cv.pdf
     weight: 80
+  - name: test
+    url: "test/"
+    weight: 90
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
